--- a/1.html
+++ b/1.html
@@ -682,6 +682,10 @@
 
 
 
+
+
+
+
     <style id="current-page-style">
         .page-facebook {
             display: inherit;
@@ -800,8 +804,7 @@
                 class="silex-element-content"></div>
 
         <a id="page-home" data-silex-type="page" class="page-element">Home</a><a id="page-facebook" data-silex-type="page" class="page-element page-link-active">Facebook</a><a class="page-element" data-silex-type="page" id="page-twitter">Twitter</a>
-        <a
-            class="page-element" data-silex-type="page" id="page-instagram">Instagram</a>
+        <a class="page-element" data-silex-type="page" id="page-instagram">Instagram</a>
     </div>
 
 
@@ -1006,6 +1009,10 @@
             </div>
         </div>
     </div>
+
+
+
+
 </body>
 
 </html>
